--- a/Cil.CompiledTemplates.Cecil/Cil.CompiledTemplates.Cecil.csproj
+++ b/Cil.CompiledTemplates.Cecil/Cil.CompiledTemplates.Cecil.csproj
@@ -62,6 +62,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="AppDomainAssemblyResolver.cs" />
     <Compile Include="Attributes.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="ILBranchManager.cs" />
