--- a/Cil.CompiledTemplates.Cecil/Cil.CompiledTemplates.Cecil.csproj
+++ b/Cil.CompiledTemplates.Cecil/Cil.CompiledTemplates.Cecil.csproj
@@ -38,6 +38,7 @@
   </PropertyGroup>
   <Import Project="..\SharedBuildProperties.props" />
   <ItemGroup>
+    <Reference Include="ISymWrapper" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Mono.Cecil">
       <HintPath>..\lib\Mono.Cecil.dll</HintPath>
@@ -66,9 +67,12 @@
     <Compile Include="Attributes.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="ILBranchManager.cs" />
+    <Compile Include="PdbGuids.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpliceLocation.cs" />
+    <Compile Include="Symbols.cs" />
     <Compile Include="TemplateContext.cs" />
+    <Compile Include="TemplateContextBase.cs" />
     <Compile Include="TemplateHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
