Add XML documentation for public members

--- a/Cil.CompiledTemplates.Cecil/Cil.CompiledTemplates.Cecil.csproj
+++ b/Cil.CompiledTemplates.Cecil/Cil.CompiledTemplates.Cecil.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\Cil.CompiledTemplates.Cecil.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,13 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
+    <DocumentationFile>bin\Release\Cil.CompiledTemplates.Cecil.xml</DocumentationFile>
   </PropertyGroup>
   <Import Project="..\SharedBuildProperties.props" />
   <ItemGroup>
