Upgrade Cecil to 0.11.4

--- a/Cil.CompiledTemplates.Cecil/Cil.CompiledTemplates.Cecil.csproj
+++ b/Cil.CompiledTemplates.Cecil/Cil.CompiledTemplates.Cecil.csproj
@@ -9,9 +9,7 @@
   </PropertyGroup>
   <Import Project="..\SharedBuildProperties.props" />
   <ItemGroup>
-    <!--PackageReference Include="Mono.Cecil" Version="0.10.0" /-->
-    <ProjectReference Include="..\..\elasticbytes\EntityStore\Cecil\Mono.Cecil.csproj" />
-    <ProjectReference Include="..\..\elasticbytes\EntityStore\Cecil\rocks\Mono.Cecil.Rocks.csproj" />
+    <PackageReference Include="Mono.Cecil" Version="0.11.4" />
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
   </ItemGroup>
   <ItemGroup>
