--- a/NuGet/Cil.CompiledTemplates.Cecil.nuspec
+++ b/NuGet/Cil.CompiledTemplates.Cecil.nuspec
@@ -15,12 +15,12 @@
     </description>
     <tags>assembly assemblies module modules il cil msil bytecode reflection injection cecil aop postcompile weaving template templates</tags>
     <dependencies>
-      <dependency id="System.Collections.Immutable" version="1.1" />
-      <dependency id="Mono.Cecil" version="0.10.0" />
+      <dependency id="System.Collections.Immutable" version="1.5.0" />
+      <dependency id="Mono.Cecil" version="0.11.4" />
     </dependencies>
   </metadata>
   <files>
-    <file src="..\Cil.CompiledTemplates.Cecil\bin\$configuration$\Cil.CompiledTemplates.Cecil.dll" target="lib\net45" />
-    <file src="..\Cil.CompiledTemplates.Cecil\bin\$configuration$\Cil.CompiledTemplates.Cecil.xml" target="lib\net45" />
+    <file src="..\Cil.CompiledTemplates.Cecil\bin\$configuration$\Cil.CompiledTemplates.Cecil.dll" target="lib\netstandard2.0" />
+    <file src="..\Cil.CompiledTemplates.Cecil\bin\$configuration$\Cil.CompiledTemplates.Cecil.xml" target="lib\netstandard2.0" />
   </files>
 </package>
